# sentrylogmon

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  TODOPREF.md  benchmark_baseline.txt  benchmark_result.txt  check_arraylist.zig  check_page_size.zig  check_ux.sh  check_writer.zig  detector_inference_test.go  go.mod  go.sum  install_service.sh  main.go  main_test.go  plan.md  sentrylogmon.service  sentrylogmon.yaml  status_test.go  test.sh  test_perf_test.go  test_zig_posix_uid.zig  test_zig_sanitizer_review.zig  test_zig_uid.zig  watcher.go  watcher_test.go
.Jules/: bolt.md  palette.md
.jules/: bolt.md  palette.md  sentinel.md
archived/: HISTORY.md
config/: config.go  config_test.go  format_test.go  redact_test.go  validate_test.go
detectors/: benchmark_context_test.go  benchmark_iso8601_test.go  benchmark_json_test.go  benchmark_nginx_error_test.go  benchmark_syslog_test.go  benchmark_test.go  benchmark_timestamp_test.go  detector.go  detectors_test.go  dmesg.go  dmesg_test.go  factory.go  fuzz_test.go  generic.go  iso8601_test.go  json.go  json.patch  json_bench_test.go  json_test.go  nginx.go  nginx_access_test.go  nginx_error.go  nginx_error_test.go  nginx_error_timestamp_test.go  timestamps.go  timestamps_test.go
doc/: ARCHITECTURE.md  DESIGN.md  DEVELOPMENT.md  HISTORY.md  ROADMAP.md  TESTING.md
e2e/: Dockerfile  docker-compose.yml  test.sh  test_local.sh
examples/: config.yaml
ipc/: client.go  ipc_test.go  security_test.go  security_unix_test.go  (+4 more)
rust/: Cargo.toml  README.md
rust/src/: ipc.rs  main.rs  metrics.rs
rust/src/config/: mod.rs
rust/src/detectors/: mod.rs
rust/src/monitor/: mod.rs
rust/src/sources/: command.rs  dmesg.rs  file.rs  journalctl.rs  mod.rs  syslog.rs
rust/src/sysstat/: mod.rs  sanitizer.rs
(+73 files in other folders)
