[package]
name = "sentrylogmon"
version = "0.1.0"
edition = "2021"
authors = ["sentrylogmon contributors"]
description = "Lightweight log monitoring tool with Sentry integration"
license = "MIT"

[dependencies]
sentry = "0.32"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
regex = "1.10"
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sysinfo = "0.30"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
notify = "6.1"
async-trait = "0.1"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols from binary
